# Baselines

./: README.md
bolt/: CMakeLists.txt  Test.txt
bolt/cmake/: SCIConfig.cmake
bolt/networks/: main_ffnn128.cpp  main_hinet4.cpp  main_lenet128.cpp  main_logistic128.cpp
bolt/src/: cleartext_library_float.cpp  library_float.h  library_float_beacon.cpp  library_float_secfloat.cpp
bolt/src/FloatingPoint/: bool-data.h  fixed-point.cpp  fixed-point.h  fp-math.cpp  fp-math.h
bolt/src/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  defines-HE.h  elemwise-prod-field.cpp  elemwise-prod-field.h  fc-field.cpp  fc-field.h  utils-HE.cpp  utils-HE.h
bolt/src/LinearOT/: linear-ot.cpp
bolt/src/Math/: math-functions.cpp  math-functions.h
bolt/src/utils/: net_io_channel.h
bolt/tests/: CMakeLists.txt
bolt/tests/activation/: CMakeLists.txt  bolt_gelu.cpp  bolt_layer_norm.cpp  bolt_softmax.cpp  bolt_tanh.cpp  iron_gelu.cpp  iron_softmax.cpp
bolt/tests/bert_bolt/: CMakeLists.txt  bert.cpp  bolt_bert.cpp  he.h  linear.cpp  linear.h  nonlinear.cpp  nonlinear.h
bolt/tests/bert_iron/: CMakeLists.txt  bert.cpp  he.h  iron_bert.cpp  linear.h  nonlinear.h
bumblebee/: README.md  Test.txt  requirements-dev.txt
bumblebee/spu/intrinsic/: spu_vit_gelu_impl.py
md-ml/: Test.txt
md-ml/experiments/: CMakeLists.txt
md-ml/experiments/relu/: CMakeLists.txt  relu_config.h  relu_party_0.cpp  relu_party_1.cpp
md-ml/src/fake-offline/: FakeMultiplyGate.h
md-ml/src/networking/: Party.cpp  Party.h
md-ml/src/protocols/: MultiplyTruncGate.h  PartyWithFakeOffline.h
md-sonic/: LICENSE.md  README.md  Test.txt  pom.xml
md-sonic/core/: pom.xml
md-sonic/demos/: pom.xml
md-sonic/demos/bench/: Makefile  pom.xml
md-sonic/demos/common/: pom.xml
md-sonic/demos/nn/: Makefile  README.md  pom.xml
md-sonic/networks/AlexNet_Cifar10/: weight3.csv  weight8.csv
md-sonic/networks/AlexNet_ImageNet/: weight1.csv  (+3 more)
md-sonic/scripts/: generate_csv.py  generate_weights_bias_CNN.py  generate_weights_bias_FULL.py  txt2csv.py
md-sonic/suite/: pom.xml
shaft/: Test.txt
shark/: CMakeLists.txt  Test.txt  network.sh  run-benchmarks-local.sh  run-benchmarks-remote.sh  run-microbenchmarks-local.sh  run-microbenchmarks-remote.sh
shark/benchmarks/: bert-large.cpp  bert-tiny.cpp  bert.cpp
shark/microbenchmarks/: gelu.cpp  reciprocal.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
(+599 files in other folders)
